# radius

./: CMakeLists.txt  install_prefix.conf  radius.conf.linux.example  radius.conf.win.example  radius.pro
app/: CMakeLists.txt  app.pro
app/opencv_test/: calcHist_Demo.cpp  opencv_test.pri  opencv_test.pro
app/radius/: CMakeLists.txt  main.cpp  radius.pro  radius_mainwindow.ui  radmainwindow.cpp  radmainwindow.h
app/test1/: Makefile.am  main.cpp  test1.pro
app/test2/: Makefile.am  main.cpp
icons/: radius_icons.qrc
include/: Makefile.am
reports/: Radius.dia
src/: CMakeLists.txt  ConvAzimuthPhys.cpp  ConvAzimuthPhys.h  ConvAzimuthThread.cpp  ConvAzimuthThread.h  ConvDistColumnThread.cpp  ConvDistColumnThread.h  ConvDistPhys.cpp  ConvDistPhys.h  ConvDistPlugin.cpp  ConvDistPlugin.h  ConvDistThread.cpp  ConvDistThread.h  ConvolSingleton.cpp  ConvolSingleton.h  ImageGeneratorObject.cpp  ImageGeneratorObject.h  ImageGolographicThread.cpp  ImageGolographicThread.h  RadSettings.cpp  RadSettings.h  RadarImageEq.cpp  RadarImageEq.h  assistant.cpp  assistant.h  calcim.cpp  calcim.h  cvmat_to_qimage.cpp  cvmat_to_qimage.h  fft_c.cpp  fft_c.h  histogramCalc.cpp  histogramCalc.h  hoverpoints.cpp  hoverpoints.h  matrix.cpp  matrix.h  qimage_to_cvmat.cpp  qimage_to_cvmat.h  radapplication.cpp  (+9 more)
src/gologram/: cuboid.h  gobjloader.cpp  gobjloader.h  gologram.pri  gologramma.cpp  gologramma.h  image_creator_form.ui  imagecreatorform.cpp  imagecreatorform.h  model3Dconst.h
src/gui/: arthurstyle.cpp  arthurstyle.h  arthurwidgets.cpp  arthurwidgets.h  golographicDelegate.cpp  golographicDelegate.h  golographicModel.cpp  golographicModel.h  golographicWidget.cpp  golographicWidget.h  gui.pri  radDataWidget.cpp  radDataWidget.h  radMdiArea.cpp  radMdiArea.h  radTableWidget.cpp  radTableWidget.h  rggImageWidget.cpp  rggImageWidget.h  rhistwidget.cpp  rhistwidget.h  xform.cpp  xform.h
src/gui/OpenGl/: glwidget.h  object.cpp  object.h  objloader.h  qtlogo.cpp  qtlogo.h  window.h
src/gui/ui/: conv_azimuth_widget.ui  conv_distance_widget.ui  convazimuthwidget.cpp  convazimuthwidget.h  convdistancewidget.cpp  convdistancewidget.h  editsettingsform.h  fft_time_widget.ui  ffttimewidget.cpp  ffttimewidget.h  gologram_widget.ui  gologramwidget.cpp  gologramwidget.h  savesettingsform.h
src/misc/: constants1.h  misc.pri
transl/: radius_ru.ts
